--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view = false
 spring.jpa.show-sql = true
+server.error.include-message=always
 
 #/**
 #* @author : sachini
