--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,14 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view = false
 spring.jpa.show-sql = true
 server.error.include-message=always
+spring.servlet.multipart.enabled=true
+
+
+
+
+
+
+
 
 #/**
 #* @author : sachini
