--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,12 @@ spring.datasource.url = jdbc:mysql://localhost:3306/green_shadow_system?createDa
 spring.datasource.username = root
 spring.datasource.password = ijse@2001
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto = update
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view = false
 spring.jpa.show-sql = true
 server.error.include-message=always
 spring.servlet.multipart.enabled=true
-
-
+spring.jpa.hibernate.ddl-auto = none
 
 
 
