--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.open-in-view = false
 spring.jpa.show-sql = true
 server.error.include-message=always
 spring.servlet.multipart.enabled=true
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 
 
 
