--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.open-in-view = false
 spring.jpa.show-sql = true
 server.error.include-message=always
 spring.servlet.multipart.enabled=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
+jwt.secret=e#s$p%o$r^t9
 
 
 
