--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,24 @@
 spring.application.name=Green-Shadow-Backend
-
+#db configurations
 spring.datasource.url = jdbc:mysql://localhost:3306/green_shadow_system?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = ijse@2001
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.jpa.open-in-view = false
+
+#jpa configurations
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql = true
 server.error.include-message=always
+spring.jpa.database=mysql
 spring.servlet.multipart.enabled=true
-spring.jpa.hibernate.ddl-auto = none
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#token
 jwt.secret=e#s$p%o$r^t9
+
+
 
 
 
