--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,19 @@ spring.jpa.database=mysql
 spring.servlet.multipart.enabled=true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#spring.datasource.hikari.maximum-pool-size=20
+#spring.datasource.hikari.validation-timeout=5000
+
+#spring.web.cors.allowed-origins=*
+#spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+
+
 #token
 jwt.secret=e#s$p%o$r^t9
 
 
-
+#server.servlet.context-path=/green_shadow
 
 
 
