update- add genarate id to staffLogDetails and fix getAll errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,10 @@ jwt.secret=e#s$p%o$r^t9
 
 #server.servlet.context-path=/green_shadow
 
+logging.level.org.springframework.security=DEBUG
 
 
+spring.jackson.stream-write-constraints.max-nesting-depth=2000
 
 
 
