--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,16 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <!-- Let Spring Boot manage Logback's version -->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
